Change drawer to a permanent sidebar

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -14,12 +14,6 @@
   <body onload="initialize();">    
     <header class="bmd-layout-header">
       <div class="navbar navbar-dark bg-faded">
-        <button class="navbar-toggler" type="button" data-toggle="drawer" data-target="#dw-s2">
-          <span class="sr-only">Toggle drawer</span>
-          <span id="drawer-toggle" class="btn">
-            &#9776;
-          </span>
-        </button>
 
         <h5>
           Planning a road trip? Enter a home location and your desired travel time to find interesting attractions!
@@ -34,7 +28,7 @@
     </header>
 
     <div class="bmd-layout-canvas">
-      <div class="bmd-layout-container bmd-drawer-f-l bmd-drawer-overlay">
+      <div class="bmd-layout-container bmd-drawer-f-l">
         <div id="dw-s2" class="bmd-layout-drawer bg-faded">
             
           <header>
