Update header / map styling with new drawer

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -13,7 +13,7 @@
 
   <body onload="initialize();">    
     <header class="bmd-layout-header">
-      <div class="navbar navbar-dark bg-faded">
+      <div style="text-align:center" class="navbar navbar-dark bg-faded">
 
         <h5>
           Planning a road trip? Enter a home location and your desired travel time to find interesting attractions!
@@ -95,7 +95,7 @@
 
         </div>
 
-        <main class="bmd-layout-content">
+        <main class="bmd-layout-content content">
           <div hidden class="card-scroller" id="scroller"></div>
           <div id="map"></div>
         </main>
