Remove displaySavedPlaces.js reference from index.html.

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -20,7 +20,7 @@
             &#9776;
           </span>
         </button>
-        <a class="btn btn-outline-primary" onclick="displaySaved()">Saved</a>
+        <a class="btn btn-outline-primary" onclick="savedPlaces()">Saved</a>
         <ul class="nav navbar-nav">
           <li class="nav-item">
             <div id="dash"></div>
@@ -245,6 +245,5 @@
     <script src="script.js"></script>
     <script src="signup.js"></script>
     <script src="login.js"></script>
-    <script src="displaySavedPlaces.js"></script>
   </body>
 </html>
