Add check to avoid duplicate cards.

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -22,6 +22,8 @@
             </span>
           </button>
           <a class="btn btn-outline-primary" onclick="savedPlaces()">Saved</a>
+          <a class="btn btn-outline-primary" onclick="clearPlaces()">Remove</a>
+          <ul class="nav navbar-nav">
           <ul class="nav navbar-nav">
             <li class="nav-item">
               <div id="dash">
