--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -91,14 +91,14 @@
             <div class="card">
               <div class="card-header text-center" id="headingThree">
                 <h1 class="mb-0">
-                  <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseThree"
-                        aria-expanded="false" aria-controls="collapseThree">
-                    Attraction Type
+                  <button class="btn btn-link text-color" data-toggle="collapse" data-target="#collapseThree"
+                        aria-expanded="true" aria-controls="collapseThree">
+                    Destination Type
                   </button>
                 </h1>
               </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                <div class="card-header text-color">
+              <div id="collapseThree" class="collapse show" aria-labelledby="headingThree">
+                <div class="card-header bg-light text-color">
                   <div class="multi-select-container">
                     <div class="multi-select-pill">Tourism</div>
                     <div class="multi-select-pill">Hiking</div>
