--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -114,7 +114,9 @@
 
           <span id="search-btn-container">
             <button type="button" id="submit" class="btn btn-primary search-btn">Search</button>
+            <button type="button" onclick="clearPlaces()" class="btn btn-primary search-btn">Clear</button>
           </span>
+          
           <div id="feedback-target"></div>
         </div>
      
