Change handling of form submit

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -160,7 +160,7 @@
             <h5 class="modal-title">Sign Up</h5>      
           </div>
           <div class="modal-body">
-            <form style="margin: auto" id="signUpForm" action="">
+            <form style="margin: auto" id="signUpForm" action="#">
               <div class="form-group">
                 <label for="nameInput" class="bmd-label-floating">Name</label>
                 <input type="text" class="form-control" id="nameSignUp" required>
@@ -201,7 +201,7 @@
                   Looks good!
                 </div>
               </div>
-              <button type="submit" id="signUp" class="btn btn-primary" >Sign Up</button>
+              <button id="signUpSubmit" class="btn btn-primary" >Sign Up</button>
               <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </form>
           </div>
