Remove extra space

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -201,7 +201,7 @@
                   Looks good!
                 </div>
               </div>
-              <button id="signUpSubmit" class="btn btn-primary" >Sign Up</button>
+              <button type="button" id="signUpSubmit" class="btn btn-primary" >Sign Up</button>
               <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </form>
           </div>
