Change onclick for clear button

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -113,7 +113,7 @@
 
           <span id="search-btn-container">
             <button type="button" id="submit" class="btn btn-primary search-btn font-size-large">Search</button>
-            <button type="button" onclick="clearPlaces()" class="btn btn-primary search-btn font-size-large">Clear</button>
+            <button type="button" onclick="clearSearch()" class="btn btn-primary search-btn font-size-large">Clear</button>
           </span>
           
           <div id="feedback-target"></div>
