Change top text to include user's name when logged in

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -19,10 +19,10 @@
       <header class="bmd-layout-header">
         <div class="navbar bg-faded">
           <div class="text-center" style="width:330px">
-            <h1 class="navbar-brand text-center text-color font-size-large"> <img src="icons/pin.svg" width="20" height="38"> Where to?</h1>
+            <h1 class="navbar-brand text-center text-color font-size-large"> <img src="icons/pin.svg" width="20" height="38"> Where to? </h1>
           </div>
 
-          <span class="navbar-text">
+          <span id="top-text" class="navbar-text">
             Planning a road trip? Enter a home location and travel time to find interesting attractions!
           </span>    
           <ul class="nav navbar-nav">
