Add function to add trip element

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -36,7 +36,7 @@
       <div class="bmd-layout-container bmd-drawer-f-l">
         <div id="dw-s2" class="bmd-layout-drawer bg-faded">
 
-          <div id="searchOptions" class="text-center" hidden>
+          <div id="searchOptions" class="text-center">
             <div class="card">
               <div class="card-header text-center" id="headingOne">
                 <h1 class="mb-0">
@@ -118,7 +118,7 @@
             
           </div>
 
-          <div id="tripOptions" class="text-center">
+          <div id="tripOptions" class="text-center" style="display:none">
             <div class="card">
               <div class="card-header bg-light text-center">
                 <h3 class="mb-0">
@@ -136,6 +136,9 @@
                   </div>
                 </div>
               </div>
+            </div>
+
+            <div class="card" id="trips">
             </div>
           </div>
 
