--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -122,7 +122,7 @@
             <div class="card">
               <div class="card-header bg-light text-center">
                 <h3 class="mb-0">
-                Your Trips
+                My Trips
                 </h3>
               </div>
             </div>
