Add bigger plus icon

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -132,7 +132,7 @@
                 <div class="input-group mb-3">
                   <input type="text" class="form-control" id="tripName" placeholder="New trip">
                   <div class="input-group-append">
-                    <input type="image" style="outline:none" src="icons/plus.svg" onclick="addTrip()"> 
+                    <input type="image" style="outline:none" src="icons/plus-med.svg" onclick="addTrip()"> 
                   </div>
                 </div>
               </div>
