Add deleting of trips by dragging card

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -140,6 +140,13 @@
 
             <div class="card" id="trips">
             </div>
+
+            <div class="card" ondrop="deleteTrip(event)" ondragover="allowDrop(event)">
+              <div class="card-header bg-light text-center">
+                <img class="delete" src="icons/trashcan.svg"> 
+              </div>
+            </div>
+
           </div>
 
         </div>
